--- a/src/payment/.env
+++ b/src/payment/.env
@@ -14,3 +14,5 @@ DATABASE_URL=
 SQLITE_URL=sqlite:///db.sqlite3
 CACHE_URL=memcache://127.0.0.1:11211,127.0.0.1:11212,127.0.0.1:11213
 REDIS_URL=rediscache://127.0.0.1:6379/1?client_class=django_redis.client.DefaultClient&password=ungithubbed-secret
+
+TMB_NOTIFY_URL=http://sit.datagateway.tmbbizdirect.com:9680/VerifySlip/dgw/VerifyV2/QRPayment/
